--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9425,13 +9425,11 @@ Lark:
       model: 'FreeMe X4 7HD 3G'
     - regex: 'FreeMe[ _]X2[ _]([7-9])'
       model: 'FreeMe X2 $1'
-    - regex: 'FreeMe X4[ _]7[_ ]HD'
+    - regex: 'FreeMe X4[ _]7[_ ]?HD'
       model: 'FreeMe X4 7HD'
     - regex: 'FreeMe X4[ _]9'
       model: 'FreeMe X4 9'
     - regex: 'FreeMe X4 7'
-      model: 'FreeMe X4 7HD'
-    - regex: 'FreeMe X4 7HD'
       model: 'FreeMe X4 7'
     - regex: 'FreeBird 5WiFi'
       model: 'FreeBird 5 WiFi'
